# arax

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .uncrustify.cfg  .vine_controller  CMakeLists.txt  Doxyfile  Makefile  README  README.md  README_junit  VineTalk.h  a00290.html  a00299.html  a00302.html  a00947.html  a01346.html  a01346.js  a01346_source.html  a01347.map  a01347.md5  a01348.map  a01348.md5  a01349.html  a01349.js  a01349_a186712b2a923d4bda1be98de189bc0f9_icgraph.map  a01349_a186712b2a923d4bda1be98de189bc0f9_icgraph.md5  a01349_a1cfa2c90268c6e53ce376beb7cce153c_cgraph.md5  a01349_a4c22ae41507232dc3efc725428cbfc7b_cgraph.map  a01349_a4c22ae41507232dc3efc725428cbfc7b_cgraph.md5  a01349_a5006bea23d2b9964f0f7c12947180e01_icgraph.md5  a01349_a5144f906658718ef853a8d18dda1e724_cgraph.md5  a01349_a57a9203f163a9c8c78e22bde5fa4efbc_cgraph.map  a01349_a59aa16caa6dfcec85af956b42b33a0fa_cgraph.map  a01349_a59aa16caa6dfcec85af956b42b33a0fa_cgraph.md5  a01349_a60dde947b05bc69599a6c7d92c38d088_icgraph.map  a01349_a79b763e71a5ae1e57f78c008e7c1135c_cgraph.md5  a01349_a8b36751c1bdab169e4735143d3712a09_icgraph.map  a01349_a8d805b003097be6a6328a35c78bf558b_icgraph.map  a01349_a8d805b003097be6a6328a35c78bf558b_icgraph.md5  (+3128 more)
controller/: .gitlab-ci.yml  CMakeLists.txt  README.md  conf.json
controller/ci/: rr_cpu.json
controller/cmake/: Install.cmake  pre-commit  vc_utils.cmake
controller/docker/: Dockerfile  arax_start.sh  arax_stop.sh  entry.sh
controller/example_configs/: amd_1strm.json  amd_2strms.json  cpu.json  fpga_2nv_amd_lavaMD.json  fpga_lavaMD.json  nvidia_1strm.json  nvidia_2strms.json
controller/include/: AraxLibMgr.h  AraxLibUtilsCPU.h  AraxLibUtilsGPU.h  AraxLibUtilsHIPGPU.h  AraxLibUtilsMemOps.h  AraxLibUtilsNanoCore.h  AraxLibUtilsOpenCL.h  AraxLibUtilsSDA.h  BaselineCheckpointScheduler.h  CLHelper.h  CPUaccelThread.h  CUDAaccelThread.h  CheckpointScheduler.h  Config.h  Csv.h  ElasticScheduler.h  FPGAaccelThread.h  Factory.h  FlexyRRScheduler.h  Formater.h  FreeThread.h  HIPaccelThread.h  HeterogeneousScheduler.h  LoadBalanceScheduler.h  MemoryUsageCheckpointScheduler.h  OpenclaccelThread.h  RoundRobinScheduler.h  SDAaccelThread.h  Scheduler.h  Services.h  TimeBasedCheckpointScheduler.h  Utilities.h  VacBalancerThread.h  VoidCheckpointScheduler.h  WeightedRoundRobinScheduler.h  accelThread.h  cuda_utils.h  definesEnable.h.cmake  deviceBaseOps.h  err_code.h  (+6 more)
controller/monitoringTool/: Makefile  READMe  common.c  common.h  count.c  count.h  monitoringThread.cu  monitoringThread.cuh  rd_stats.h  runMonitoringTool.sh
controller/src/Core/: CMakeLists.txt  Config.cpp  Config.h  Csv.cpp  FreeThread.cpp  FreeThread.h  Scheduler.cpp  Scheduler.h  Services.cpp  Utilities.cpp  VacBalancerThread.cpp  VacBalancerThread.h  accelThread.cpp  accelThread.h  araxLibMgr.cpp  arax_controller.cpp
controller/src/Cpu/: CMakeLists.txt  CPUaccelThread.cpp  CPUaccelThread.h  CpuBuiltins.cpp
controller/src/Cuda/: CMakeLists.txt  CUDABuiltins.cu  CUDABuiltins.h  CUDAaccelThread.cpp  CUDAaccelThread.h  CublasService.cpp  CudnnService.cpp  CurandService.cpp  ResetGpu.cpp  creatConfig.cu  cuda_utils.h  occupancy.cu  occupancy.cuh  prepareGPU.cu
controller/src/OpenCL/: CMakeLists.txt  OpenclBuiltins.cpp  OpenclaccelThread.cpp  OpenclaccelThread.h
controller/src/ROCm/: CMakeLists.txt  HIPBuiltins.cpp  HIPaccelThread.cpp  ResetHIPGpu.cpp  creatConfig.cpp  prepareHIPGPU.cpp
controller/src/Schedulers/: BaselineCheckpointScheduler.cpp  CMakeLists.txt  CheckpointScheduler.cpp  ElasticScheduler.cpp  ElasticScheduler.h  FlexyRRScheduler.cpp  HeterogeneousScheduler.cpp  HeterogeneousScheduler.h  LoadBalanceScheduler.cpp  MemoryUsageCheckpointScheduler.cpp  RoundRobinScheduler.cpp  RoundRobinScheduler.h  TimeBasedCheckpointScheduler.cpp  VoidCheckpointScheduler.cpp  WeightedRoundRobinScheduler.cpp
controller/src/Sda/: CMakeLists.txt  SDAaccelThread.cpp
examples/: CMakeLists.txt  Makefile  build_all.sh  consumer.c  ex1.c  ex2.c  ex3.c  producer.c  queue_test.c  vdf.cpp  vine_profiler.conf
noop/: CMakeLists.txt  noop.cpp  noop_stress.cpp  vine_talk.c
src/alloc/dlmalloc/: CMakeLists.txt  alloc.c  malloc.c  malloc.h  test.c
src/alloc/tlsf/: CMakeLists.txt  alloc.c
src/arch/: CMakeLists.txt  alloc.h  async.h
src/arch/dummy/: alloc.c  vine_talk.c
src/arch/shm/: alloc.c  impl.c  vine_talk.c
src/async/: CMakeLists.txt  async.h  async_api.h
src/async/ivshmem/: async.c  (+1 more)
src/core/: CMakeLists.txt  alloc.c  arax_accel.c  arax_accel.h  arax_accel_types.c  arax_accel_types.h  arax_data.c  arax_data.h  arax_data_private.h  arax_object.c  arax_object.h  arax_pipe.c  arax_proc.c  arax_proc.h  arax_ptr.c  arax_ptr.h  arax_task.c  arax_task.h  arax_throttle.c  arax_throttle.h  arax_vaccel.c  arax_vaccel.h  vine_accel.c  vine_accel.h  vine_accel_types.c  vine_accel_types.h  vine_buffer.c  vine_buffer.h  vine_data.c  vine_data.h  vine_data_private.h  vine_object.c  vine_object.h  vine_pipe.c  vine_proc.c  vine_proc.h  vine_ptr.c  vine_ptr.h  vine_talk_dummy.c  vine_task.c  (+5 more)
tests/: CMakeLists.txt  accel_throttle.c  accel_throttle.cpp  alloc_perf.c  alloc_perf.cpp  arax_accel.cpp  arax_data.cpp  arax_mmap.cpp  arax_object.cpp  arax_plot.cpp  arax_talk.cpp  arax_throttle.cpp  async.c  async.cpp  bitmap.c  bitmap.cpp  break.c  config.c  config.cpp  handlers.cpp  kv.c  kv.cpp  list.c  list.cpp  mmap.c  mmap.cpp  pipe_throttle.c  pipe_throttle.cpp  queue.c  queue.cpp  struct_interop.c  struct_interop.cpp  struct_interop.h  system.c  system.cpp  testing.c  testing.cpp  testing.h  tracer.c  vine_accel.c  (+13 more)
vdf/: CMakeLists.txt  Collector.cpp  Collector.h  JobTrace.cpp  JobTrace.h  Misc.cpp  Misc.h  Mon.h  Pallete.cpp  Pallete.h  Sample.cpp  Sample.h  WebUI.cpp  WebUI.h  script.js  style.css  vdf.cpp
vdf/Views/: Allocations.cpp  Config.cpp  Objects.cpp  StructSizes.cpp  Throttle.cpp  Views.h
vtop/: CMakeLists.txt  ClickManager.cpp  ClickManager.h  Graph.cpp  Graph.h  MainView.cpp  MainView.h  ProcessBar.cpp  ProcessBar.h  Utils.cpp  Utils.h  ValueBar.h  ValueTable.h  VtopWindow.h  vtop.cpp
(+312 files in other folders)
