include(CheckCXXCompilerFlag)
CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
if(COMPILER_SUPPORTS_CXX11)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
elseif(COMPILER_SUPPORTS_CXX0X)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
else()
        message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
endif()

add_library(nooplib EXCLUDE_FROM_ALL SHARED noop.cpp)
target_include_directories(nooplib PRIVATE ${VINE_CONTROLER_PATH}/include)
target_compile_definitions(nooplib PRIVATE BUILD_SO)
target_link_libraries(nooplib vine_st)

add_executable(noop EXCLUDE_FROM_ALL noop.cpp)
target_include_directories(noop PRIVATE ${VINE_CONTROLER_PATH}/include)
target_compile_definitions(noop PRIVATE BUILD_MAIN)
target_link_libraries(noop vine_st)
add_dependencies(noop nooplib)

add_executable(noop_stress EXCLUDE_FROM_ALL noop_stress.cpp)
target_include_directories(noop_stress PRIVATE ${VINE_CONTROLER_PATH}/include)
target_compile_definitions(noop_stress PRIVATE BUILD_MAIN)
target_link_libraries(noop_stress vine_st)
add_dependencies(noop nooplib)
