if(Poco_FOUND)
    find_package(Poco REQUIRED Net)
    if(VINE_TELEMETRY)
        add_executable(vdf vdf.cpp Misc.cpp WebUI.cpp Pallete.cpp Collector.cpp Sample.cpp JobTrace.cpp)
    else()
        add_executable(vdf vdf.cpp Misc.cpp WebUI.cpp Pallete.cpp)
    endif()
    set_target_properties(vdf PROPERTIES COMPILE_FLAGS -std=c++11)
    target_link_libraries(vdf vine_st rt pthread ${Poco_Util_LIBRARY} ${Poco_Foundation_LIBRARY} ${Poco_Net_LIBRARY})
endif()

